--- a/static.css
+++ b/static.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: linear-gradient(135deg, #231437 0%, #2c385e 50%, #336e6b 100%);
+    background-image: linear-gradient(135deg, #231437 0%, #2c385e 30%, #336e6b 100%);
     margin: 0;
     padding: 0;
     color: white;
@@ -18,7 +18,7 @@ body {
 }
 
 .first-section {
-    background-image: url("hulupage.jpg");
+    background-image: url("assets/hulupage.jpg");
     height: 100%;
     text-align: right;
 }
@@ -34,7 +34,7 @@ a {
 
 .first-banner {
     color: #2DBD9D;
-    font-size: 13px;
+    font-size: 10px;
     padding: 30px;
     position: relative;
     top: 60px;
@@ -42,9 +42,8 @@ a {
 
 .hulu {
     color: lime;
-    font-size: 1em;
+    font-size: 4em;
     font-weight: 400;
-    font-size: 5em;
     font-family: 'Graphik', Helvetica, Arial, sans-serif;
     position: relative;
     top: -70px;
@@ -54,7 +53,7 @@ a {
     margin: 0 auto;
     color: white;
     font-weight: bold;
-    font-size: 1.8em;
+    font-size: 25px;
     padding: 0px 120px;
     overflow-wrap: break-word;
     position: relative;
@@ -62,16 +61,17 @@ a {
 }
 
 .add-ons {
+    font-size: 12px;
     font: white;
     bottom: 150px;
     position: relative;
 }
 
 .trial {
-    font-size: 12px;
+    font-size: 8px;
     opacity: 0.5;
     position: relative;
-    bottom: 60px;
+    bottom: 100px;
 }
 
 .start {
@@ -88,47 +88,60 @@ a {
     background-color: white;
     text-align: center;
     margin: 0 auto;
-    padding: 0px 15px;
-    width: 25em;
-    height: 5em;
+    padding: 15px;
+    width: 16em;
+    height: 4em;
     font: black;
     font-size: 15px;
     font-weight: bold;
     border-radius: 5px;
     position: relative;
-    bottom: 70px;
-    right: 100px;
+    bottom: 90px;
+    right: 40px;
 }
 
-div.bottom-banner>p {
+.bottom-banner {
+    display: flex;
+    flex-flow: row;
+
+}
+
+.bottom-banner > p {
     color: #2DBD9D;
     height: auto;
-    padding: 10px 5px;
-    font-size: 1em;
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
+    padding: 10px 15px;
+    font-size: 12px;
+    position: relative;
+    left: 515px;
+    bottom: 15px;
+
+
 }
+
 
 #channel-logo {
-    text-align: left;
-    float: left;
-    width: 25%;
+    width: 20%;
     max-width: 50%;
-}
-
-.get>p {
-    font-size: 5em;
+    padding: 10px 10px;
+    margin:15px;
     display: flex;
     flex-flow: row;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
-.More-Details>a {
+.get > h2 {
+  position: relative;
+  left: 515px;
+  bottom: 5px;
+}
+
+
+.More-Details > a {
     color: grey;
     font-weight: normal;
     font-size: 15px;
     text-decoration: underline;
+   justify-content: flex-start;
 }
 
 #bundle-button {
@@ -137,14 +150,26 @@ div.bottom-banner>p {
     text-align: center;
     margin: 0 auto;
     padding: 0px 10px;
-    width: 9em;
+    width: 10em;
     height: 3em;
     color: white;
     font-size: 15px;
     border-radius: 4px;
     border-color: white;
     border: 2px solid;
+    position: absolute;
+  right: 180px;
+  bottom: 80px;
   
+}
+.Terms > a {
+    color:white;
+    font-weight: normal;
+    font-size: 12px;
+    text-decoration: underline;
+    position: absolute;
+    right: 200px;
+    bottom: 40px;
 }
 
 .bottom-frame {
